# stil

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  TODO.md  format.sh  install.sh  stil.code-workspace
core/: Cargo.toml  build.rs  rustfmt.toml
core/src/: lib.rs  services.rs  system_events.rs  workspaces.rs
core/src/ffi/: hyprland.rs  mod.rs  system_events.rs
core/src/freedesktop/: desktop_entry.rs  mod.rs
core/src/hyprland/ctl/: clients.rs  mod.rs  workspaces.rs
core/src/hyprland/events/: active_window.rs  close_window.rs  mod.rs  open_window.rs  workspace_v2.rs
core/src/system_events/: mod.rs  window_events.rs  workspace_events.rs
core/src/workspaces/: mod.rs  registry.rs  workspace.rs
daemon/: Cargo.toml  rustfmt.toml
daemon/src/: daemon.rs  desktop.rs  main.rs
daemon/src/hyprland/: mod.rs
daemon/src/hyprland/ctl/: clients.rs  mod.rs
daemon/src/hyprland/events/: close_window.rs  mod.rs  open_window.rs
eleven/: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  client.cpp  client.h  clients.cpp  clients.h  cpu.cpp  cpu.h  icon_lookup.cpp  icon_lookup.h  init.cpp  init.h  keyboard.cpp  keyboard.h  memory.cpp  memory.h  pinned_apps.cpp  pinned_apps.h  system.cpp  system.h  system_events.cpp  system_events.h  wallclock.cpp  wallclock.h  window.cpp  window.h  windows.cpp  windows.h  workspace.cpp  workspace.h  workspaces.cpp  workspaces.h
eleven/qml/: Css.qml  Flyout.qml  ListItem.qml  OpenedWindows.qml  PinnedAppsList.qml  PowerControlMenu.qml  SystemTray.qml  TaskBar.qml  TaskbarButton.qml  Theme.qml  WindowList.qml  WorkspaceList.qml  Workspaces.qml
eleven/src/: CMakeLists.txt  reexport.h
eleven/src/eleven/: CMakeLists.txt  desktop.cpp  desktop.h  test.h  window.h
eleven/src/eleven/ipc/: ipc.cpp  ipc.h
eleven/src/eleven/proto/: desktop.pb.cc  desktop.pb.h  hyprland.pb.cc  hyprland.pb.h
proto/: desktop.proto  hyprland.proto
proto_rust/: Cargo.toml  build.rs
proto_rust/src/: desktop.u.pb.rs  generated.rs  hyprland.u.pb.rs
proto_rust/src/proto/: hyprland.rs  mod.rs
scripts/: build.sh  format.sh  install.sh
src/: CMakeLists.txt
src/core/: Cargo.toml  build.rs
src/core/src/: lib.rs
src/core/src/hyprland/ctl/: clients.rs
src/core/src/qobjects/: application.rs  application_registry.rs  mod.rs  window.rs  workspace.rs  workspace_registry.rs
src/eleven/: CMakeLists.txt  reexport.h
src/plugin/: Cargo.toml  rustfmt.toml
src/plugin/src/hyprland/ctl/: active_window.rs
src/plugin/src/hyprland/events/: mod.rs  open_window.rs
stil_core/: Cargo.toml  build.rs
stil_core/examples/: daemon.rs  migrate_down.rs  migrate_up.rs
stil_core/src/: application.rs  dbus.rs  desktop.rs  ffi.rs  init.rs  keyboard.rs  lib.rs  notifications.rs  scheduled_events.rs  service_locator.rs  services.rs  system.rs  system_events.rs  workspace.rs  workspaces.rs
stil_core/src/db/: mod.rs  models.rs  schema.rs
stil_core/src/ffi/: hyprland.rs  mod.rs  system_events.rs
stil_core/src/freedesktop/: desktop_entry.rs  ffi.rs  icon_lookup.rs  mod.rs
stil_core/src/hyprland/: events.rs
stil_core/src/hyprland/ctl/: active_window.rs  active_workspace.rs  clients.rs  devices.rs  exec.rs  mod.rs  workspaces.rs
stil_core/src/hyprland/events/: mod.rs  move_window_v2.rs
stil_core/src/repos/: application.rs  application_repo.rs  mod.rs
stil_daemon/: .gitignore  Cargo.toml  rustfmt.toml
stil_daemon/src/hyprland/: mod.rs
stil_daemon/src/hyprland/ctl/: mod.rs
stil_daemon/src/hyprland/events/: close_window.rs  mod.rs
stil_proto_rust/: Cargo.toml
taskbar/: Cargo.toml  build.rs
taskbar/src/: events.rs  main.rs  styles.scss  system_events.rs
taskbar/src/components/: mod.rs  taskbar_item.rs
taskbar/src/ui/: mod.rs  taskbar.rs  taskbar_item.rs  wallclock.rs  window_list.rs  workspace.rs  workspace_list.rs
taskbar/src/ui/flyouts/: mod.rs  power_ctl_flyout.rs
taskbar/src/ui/notifications/: mod.rs  notification_model.rs  notifications_window.rs
taskbar/src/ui/system_tray/: mod.rs  wallclock.rs
taskbar/src/ui/window/: mod.rs  window_list.rs  window_model.rs
taskbar/src/ui/window_list/: window_list.rs
taskbar/src/ui/workspace/: mod.rs  workspace_list.rs  workspace_model.rs
