[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rayon = "1.11.0"

cxx = "1.0.187"
lazy_static = "1.5.0"

[build-dependencies]
cxx-build = "1.0.187"
