[package]
name = "stil_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rayon = "1.11.0"

cxx = "1.0.187"
sysinfo = "0.37.2"
csv = "1.4.0"
zbus = "5.12.0"
rusqlite = "0.37.0"
chrono = "0.4.42"

[build-dependencies]
cxx-build = "1.0.187"
