[package]
name = "core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rayon = "1.11.0"

cxx = "1.0.187"
cxx-qt = "0.7.3"
cxx-qt-lib = { version = "0.7.3", features = ["full"] }

[build-dependencies]
cxx-qt-build = { version = "0.7.3", features = ["link_qt_object_files"] }
